--- a/IITB_Services/templates/authentication/hair.html
+++ b/IITB_Services/templates/authentication/hair.html
@@ -1,88 +1,88 @@
 {% extends "authentication/base.html" %} {% load static %} {% block content %}
 
 <!-- <script src="{% static '/css/hair.css' %}"></script> -->
-<h3 style="color: red; text-align:center; margin-top:100px;"></h3>
+<h3 style="color: red; text-align: center; margin-top: 100px"></h3>
 
 <style>
-    .slide {
-        align-items: center;
-        width: 80%;
-        height: 80vh;
-        vertical-align: middle;
-        margin-left: auto;
-        margin-right: auto;
-        border: 0.5vh solid black;
-    }
-    
-    hr {
-        height: 10px;
-        background-color: black;
-        border: none;
-    }
-    
-    #Services {
-        margin: auto;
-        background-color: lavenderblush;
-        margin-top: 3vh;
-        margin-bottom: 5vh;
-        text-align: left;
-        border-collapse: collapse;
-        box-shadow: 0px 0px 15px 4px gray;
-    }
-    
-    th {
-        text-align: center;
-        border: solid 2px black;
-        padding: 10px;
-    }
-    
-    td {
-        border: solid 1px black;
-        padding: 5px;
-    }
-    
-    #butt {
-        text-align: center;
-    }
-    
-    .button {
-        border-radius: 100px;
-        color: white;
-        padding: 16px 32px;
-        text-align: center;
-        display: inline-block;
-        font-size: 17px;
-        margin: 4px 2px;
-        transition-duration: 0.3s;
-        cursor: pointer;
-    }
-    
-    .submit {
-        background-color: white;
-        color: black;
-        text-align: center;
-        border: 2px solid blue;
-    }
-    
-    .submit:hover {
-        background-color: rgb(63, 211, 63);
-        color: white;
-    }
-    
-    .clear {
-        background-color: white;
-        color: black;
-        text-align: center;
-        border: 2px solid blue;
-    }
-    
-    .clear:hover {
-        background-color: rgb(245, 53, 53);
-        color: white;
-    }
+  .slide {
+    align-items: center;
+    width: 80%;
+    height: 80vh;
+    vertical-align: middle;
+    margin-left: auto;
+    margin-right: auto;
+    border: 0.5vh solid black;
+  }
+  center {
+    margin: 20px;
+  }
+  hr {
+    height: 10px;
+    background-color: black;
+    border: none;
+  }
+
+  #Services {
+    margin: auto;
+    background-color: lavenderblush;
+    margin-top: 3vh;
+    margin-bottom: 5vh;
+    text-align: left;
+    border-collapse: collapse;
+    box-shadow: 0px 0px 15px 4px gray;
+  }
+
+  th {
+    text-align: center;
+    border: solid 2px black;
+    padding: 10px;
+  }
+
+  td {
+    border: solid 1px black;
+    padding: 5px;
+  }
+
+  #butt {
+    text-align: center;
+  }
+
+  .button {
+    border-radius: 100px;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 17px;
+    margin: 4px 2px;
+    transition-duration: 0.3s;
+    cursor: pointer;
+  }
+
+  .submit {
+    background-color: white;
+    color: black;
+    text-align: center;
+    border: 2px solid blue;
+  }
+
+  .submit:hover {
+    background-color: rgb(63, 211, 63);
+    color: white;
+  }
+
+  .clear {
+    background-color: white;
+    color: black;
+    text-align: center;
+    border: 2px solid blue;
+  }
+
+  .clear:hover {
+    background-color: rgb(245, 53, 53);
+    color: white;
+  }
 </style>
-
-
 
 {% endblock %}
 
@@ -98,149 +98,253 @@
 </head> -->
 
 {% block conten %}
-<div id="title" style="text-align: center; text-shadow: 2px 2px 3px brown; font-size: x-large; font-weight: bold;">
-    <hr> STYLES STUDIO - Gents PARLOUR
-    <hr>
+<div
+  id="title"
+  style="
+    text-align: center;
+    text-shadow: 2px 2px 3px brown;
+    font-size: x-large;
+    font-weight: bold;
+  "
+>
+  <hr />
+  STYLES STUDIO - Gents PARLOUR
+  <hr />
 </div>
 <section>
-    <img class="slide" src="{% static '/images/haircut/IMG_1748.JPG' %}">
-    <img class="slide" src="{% static '/images/haircut/IMG_1749.JPG' %}">
-    <img class="slide" src="{% static '/images/haircut/IMG_1750.JPG' %}">
-    <img class="slide" src="{% static '/images/haircut/IMG_1751.JPG' %}">
-    <img class="slide" src="{% static '/images/haircut/IMG_1752.JPG' %}">
-    <img class="slide" src="{% static '/images/haircut/IMG_1753.JPG' %}">
-    <img class="slide" src="{% static '/images/haircut/IMG_1754.JPG' %}">
-    <img class="slide" src="{% static '/images/haircut/IMG_1755.JPG' %}">
-    <img class="slide" src="{% static '/images/haircut/IMG_1756.JPG' %}">
-    <img class="slide" src="{% static '/images/haircut/IMG_1757.JPG' %}">
+  <img class="slide" src="{% static '/images/haircut/IMG_1748.JPG' %}" />
+  <img class="slide" src="{% static '/images/haircut/IMG_1749.JPG' %}" />
+  <img class="slide" src="{% static '/images/haircut/IMG_1750.JPG' %}" />
+  <img class="slide" src="{% static '/images/haircut/IMG_1751.JPG' %}" />
+  <img class="slide" src="{% static '/images/haircut/IMG_1752.JPG' %}" />
+  <img class="slide" src="{% static '/images/haircut/IMG_1753.JPG' %}" />
+  <img class="slide" src="{% static '/images/haircut/IMG_1754.JPG' %}" />
+  <img class="slide" src="{% static '/images/haircut/IMG_1755.JPG' %}" />
+  <img class="slide" src="{% static '/images/haircut/IMG_1756.JPG' %}" />
+  <img class="slide" src="{% static '/images/haircut/IMG_1757.JPG' %}" />
 </section>
 
-
 <script>
-    // change image in 2 secs
-    var i = 0;
-    myCarousel();
+  // change image in 2 secs
+  var i = 0
+  myCarousel()
 
-    function myCarousel() {
-        var j;
-        var x = document.getElementsByClassName("slide");
-        for (j = 0; j < x.length; j++) {
-            x[j].style.display = "none";
-        }
-        i++;
-        if (i > x.length) {
-            i = 1
-        }
-        x[i - 1].style.display = "block";
-        setTimeout(myCarousel, 2000);
+  function myCarousel() {
+    var j
+    var x = document.getElementsByClassName('slide')
+    for (j = 0; j < x.length; j++) {
+      x[j].style.display = 'none'
     }
+    i++
+    if (i > x.length) {
+      i = 1
+    }
+    x[i - 1].style.display = 'block'
+    setTimeout(myCarousel, 2000)
+  }
 </script>
 
 <table id="Services">
-    <tr>
-        <th>Services</th>
-        <th>Price(Rs.)</th>
-        <th>Select</th>
-    </tr>
-    <tr>
-        <td>Hair Cut</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Shave/Trim</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Head Massage</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Hair Colour/Hair Highlihght</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Hair Smoothing</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Hair SPA</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Hair Fall Treatment</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Bleach/Facial</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Face Massage/Clean-up</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Mundan Ceremony</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Makeup for wedding anniversary</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Body Massage</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Full Body Trimming/ DE-Tan</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Bridal/Groom Makeup</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Make Up for Birthday</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Make Up for Interview</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
-    <tr>
-        <td>Make Up for Parties</td>
-        <td>150</td>
-        <td><input type="checkbox" id="checkbox"></td>
-    </tr>
+  <tr>
+    <th>Services</th>
+    <th>Price(Rs.)</th>
+    <th>Select</th>
+  </tr>
+  <tr>
+    <td class="hello">Hair Cut</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td class="hello">Shave/Trim</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td class="hello">Head Massage</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td class="hello">Hair Colour/Hair Highlihght</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td class="hello">Hair Smoothing</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td class="hello">Hair SPA</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td class="hello">Hair Fall Treatment</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td class="hello">Bleach/Facial</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td class="hello">Face Massage/Clean-up</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td class="hello">Mundan Ceremony</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td>Makeup for wedding anniversary</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td>Body Massage</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td>Full Body Trimming/ DE-Tan</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td>Bridal/Groom Makeup</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td>Make Up for Birthday</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td>Make Up for Interview</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" name="name" /></td>
+  </tr>
+  <tr>
+    <td>Make Up for Parties</td>
+    <td>150</td>
+    <td><input type="checkbox" id="checkbox" /></td>
+  </tr>
 </table>
+<center>
+  <label>Mobile No</label>
+  <br />
+  <input
+    type="tel"
+    class="text-input jello"
+    id="jello"
+    name="phoneno"
+    placeholder="Enter Phoneno."
+    pattern="[0-9]{10}"
+    required
+  />
+</center>
 
+<script src="https://smtpjs.com/v3/smtp.js"></script>
 <script>
-    function confirmation() {
-        alert("ashish");
-    }
+  $(document).ready(function () {
+    $('#submitButton').on('click', function () {
+        var phone = document.getElementById("jello").value
+        console.log(phone)
+        if(!phone.match(/^-?\d+$/) || phone.length!=10){
+            alert("Please enter valid phone no")
+            window.location.href = '/hair'
+        }
+        else{
+            console.log("hello")
+      var aData = []
 
-    function clear_() {
-        alert("dbsjdhb");
-    }
+      $('#Services tr').each(function () {
+        var currentRow = $(this)
+        var col0 = currentRow.find('td:eq(0)').text()
+        var col1 = currentRow.find('td:eq(1)').text()
+        var price = parseFloat(col1)
+        console.log(price)
+        var obj = {}
+        obj.col1 = col0
+        obj.col2 = price
+        if (currentRow.find('#checkbox').is(':checked')) {
+          aData.push(obj)
+        }
+      })
+      var pr = 0
+      var temp = ''
+      for (let i = 0; i < aData.length; i++) {
+        pr += aData[i]['col2']
+        temp += aData[i]['col1']
+        temp += ' ... '
+      }
+      if(temp.length>0){
+          var r = confirm(' \n Your order list is:\n'+temp+ 'Your Total is : '+pr+'\nClick OK to confirm')
+        if (r == true) {
+            sendEmail(temp,pr ,phone)
+            alert('Thank you for your order..')
+            window.location.href = '/hair'
+
+        } else {
+            alert('Try again')
+            window.location.href = '/hair'
+        }
+      }
+      else{
+          alert("Please select at least one service")
+
+      }
+
+      {% comment %} sendEmail(temp, pr)
+      alert('Your order Details \n ' + temp)
+      window.location.href = '/hair' {% endcomment %}
+        }
+
+    })
+  })
+
+  function clear_() {
+    $('[type=checkbox]').prop("checked", false);
+  }
+
+  function sendEmail(temp, total, phone) {
+    Email.send({
+      SecureToken: '944b492a-a0b3-40c1-9a84-ae51c45d4fc8',
+      // HOST:"smtp.mailtrap.io",
+      // Username: '64f8d6d38ff769',
+      // Password: "bf0498a8023bb5",
+      To: 'user@gmail.com',
+      From: 'adv@iitbservices.com',
+      Subject: 'Your order is confirmed',
+      Body:
+        'Your order list is: ' +
+        '<br>' +
+        temp +
+        '<br>Your total amount is: ' +
+        total,
+    }).then((message) => alert('Order confirmed \n Thank you for your order..'))
+
+    Email.send({
+      SecureToken: '944b492a-a0b3-40c1-9a84-ae51c45d4fc8',
+      // HOST:"smtp.mailtrap.io",
+      // Username: '64f8d6d38ff769',
+      // Password: "bf0498a8023bb5",
+      To: 'hairsalon@iitb.ac.in',
+      From: 'adv@iitbservices.com',
+      Subject: 'You have a new order',
+      Body: 'The order list is: <br>' + temp +'<br> Coustmer Phone no. '+ phone,
+    }).then()
+  }
 </script>
 
 <div id="butt">
-    <button class="button submit" onclick="confirmation()">Submit</button>
-    <button class="button clear" onclick="clear_()">Clear</button>
+  <button class="button submit" id="submitButton">Submit</button>
+  <button class="button clear" onclick="clear_()">Clear</button>
 </div>
 {% endblock %}
